test_bluesuit_console/blue_dir/include/TestEngine.h


TESTENGINE_API(int32) bccmdPsuSmpsEnable(uint32 handle, uint16 reg);
TESTENGINE_API(int32) bccmdPsuHvLinearEnable(uint32 handle, uint16 reg);
TESTENGINE_API(int32) bccmdLed0Enable(uint32 handle, uint16 state);
TESTENGINE_API(int32) bccmdBc3Led1(uint32 handle, uint16 data);
TESTENGINE_API(int32) bccmdLed1Enable(uint32 handle, uint16 state);
TESTENGINE_API(int32) bccmdChargerStatus(uint32 handle, uint16 * state);
TESTENGINE_API(int32) bccmdChargerDisable(uint32 handle, uint16 state);
TESTENGINE_API(int32) bccmdChargerSuppressLed0(uint32 handle, uint16 state);
TESTENGINE_API(int32) hciCreateConnectionNoWait(uint32 handle, uint32 lap, uint8 uap, 
                                                uint16 nap, uint16 pktType, 
                                                uint8 pageScanRepMode, 
                                                uint8 pageScanMode, 
                                                uint16 clockOffset, 
                                                uint8 allowRoleSwitch);
TESTENGINE_API(int32) hciWriteAuthenticationEnable(uint32 handle, uint8 enable);
TESTENGINE_API(int32) hciLinkKeyRequestNegativeReply(uint32 handle, uint32 lap, 
                                                        uint8 uap, uint16 nap);
TESTENGINE_API(int32) hciWaitForConnectionComplete(uint32 handle, uint16* connHandle);
TESTENGINE_API(int32) hciWaitForLinkKeyRequest(uint32 handle, uint32* lap, uint8* uap, 
                                                uint16* nap);
TESTENGINE_API(int32) hciWaitForPinCodeRequest(uint32 handle, uint32* lap, uint8* uap, 
                                                uint16* nap);
TESTENGINE_API(int32) hciWaitForEncryptionChange(uint32 handle, uint8* enable);
TESTENGINE_API(int32) hciPinCodeRequestReply(uint32 handle, uint32 lap, uint8 uap, 
                                                uint16 nap, uint8 pinCodeLength, 
                                                uint8 pinCode[]);
TESTENGINE_API(int32) hciSetConnectionEncryption(uint32 handle, uint16 connHandle, 
                                                    uint8 enable);
TESTENGINE_API(int32) vmWrite(uint32 handle, const uint16 data[]);
TESTENGINE_API(int32) vmRead(uint32 handle, uint16 data[], uint16 timeout);
TESTENGINE_API(int32) bccmdSetSingleChan(uint32 handle, uint16 channel);
TESTENGINE_API(int32) bccmdSetHoppingOn(uint32 handle);
TESTENGINE_API(int32) bccmdFmSwitchPower(uint32 handle, uint8 powerOn);
TESTENGINE_API(int32) bccmdFmSetFreq(uint32 handle, uint32 freqKHz);
TESTENGINE_API(int32) bccmdFmGetRssi(uint32 handle, int8* rssi);
TESTENGINE_API(int32) bccmdFmGetSnr(uint32 handle, int16* snr);
TESTENGINE_API(int32) bccmdFmGetIfOffset(uint32 handle, int16* offset);
TESTENGINE_API(int32) bccmdFmGetStatus(uint32 handle, uint8* status);
TESTENGINE_API(int32) bccmdFmSetupAudio(uint32 handle, uint8 route, uint8 gain, 
                                        uint8 channel);
TESTENGINE_API(int32) bccmdFmVerifyRDSPi(uint32 handle, uint16 pi, uint16 timeoutMs,
                                        uint8* matched);
TESTENGINE_API(int32) bccmdFmTxSwitchPower(uint32 handle, uint8 powerOn);
TESTENGINE_API(int32) bccmdFmTxSetFreq(uint32 handle, uint32 freqKHz);
TESTENGINE_API(int32) bccmdFmTxSetPowerLevel(uint32 handle, int16 powerLevel);
TESTENGINE_API(int32) bccmdFmTxSetupAudio(uint32 handle, uint8 route, 
                                          uint16 audioGain);
TESTENGINE_API(int32) bccmdDisconnectAudio(uint32 handle);
TESTENGINE_API(int32) bccmdDirectChargerPsuTrim(uint32 handle, uint16 trim);
TESTENGINE_API(int32) teSupportsHq(uint32 handle, uint8* hqSupported);
TESTENGINE_API(int32) bccmdSetAuxDac(uint32 handle, uint8 enable, uint8 level);
TESTENGINE_API(int32) bccmdSetMicBiasIf(uint32 handle, uint8 instance, uint8 enable, 
                                          uint8 voltage);
TESTENGINE_API(int32) bccmdSetMicBias(uint32 handle, uint8 enable, uint8 voltage,
                                        uint8 current, uint8 enableLowPowerMode);
TESTENGINE_API(int32) teGetAvailableSpiPorts(uint16* maxLen, char* ports, char* trans, 
                                                uint16* count);
TESTENGINE_API(int32) bccmdProvokeFault(uint32 handle, uint16 faultCode);
TESTENGINE_API(int32) hqGetFaultReports(uint32 handle, uint16 maxReports,
                                        uint16 codes[], uint32 timestamps[],
                                        uint16 repeats[], uint16 * numReports,
                                        int32 timeout);
TESTENGINE_API(int32) teGetFaultDesc(uint32 handle, uint16 faultCode, char * desc);
TESTENGINE_API(int32) bccmdSetMapScoPcm(uint32 handle, uint8 enable);
TESTENGINE_API(int32) bccmdGetVrefConstant(uint32 handle, uint16* vref);
TESTENGINE_API(int32) bccmdGetVrefAdc(uint32 handle, uint16 * result, uint8 * numBits);
TESTENGINE_API(int32) bccmdBC5FMGetI2CState(uint32 handle, uint8 * sda, uint8 * scl);
TESTENGINE_API(int32) refEpGetRssiDbm(uint32 handle, uint16 freqMHz, float64 rssiChip, 
                                        float64 * rssiDbm);
TESTENGINE_API(int32) refEpGetPaLevel(uint32 handle, uint16 freqMHz, 
                                        float64 targetPowerDbm, uint16 * intPa, 
                                        float64 * powerDbm);
TESTENGINE_API(int32) refEpWriteCalDataFile(uint32 handle, const char * filePath);
TESTENGINE_API(int32) refEpLoadCalDataFile(uint32 handle, const char * filePath);
TESTENGINE_API(int32) bccmdGetVmStatus(uint32 handle, uint16 * status, 
                                        uint16 * exitCode);
TESTENGINE_API(int32) bccmdI2CTransfer(uint32 handle, uint16 slaveAddr, uint16 txOctets,
                                        uint16 rxOctets, uint8 restart, uint8 data[],
                                        uint16 *octets);
TESTENGINE_API(int32) radiotestBle(uint32 handle, uint16 command, uint8 channel, 
                                   uint8 txLength, uint8 txPayload);
TESTENGINE_API(int32) hqGetBleRxPktCount(uint32 handle, int32 timeout, 
                                         uint16 * pktCount);
TESTENGINE_API(int32) bccmdGetChargerTrims(uint32 handle, uint16 * chgRefTrim, 
                                            uint16 * hVrefTrim, uint16 * rTrim, 
                                            uint16 * iTrim, uint16 * iExtTrim, 
                                            uint16 * iTermTrim, uint16 * vFastTrim, 
                                            uint16 * hystTrim);
TESTENGINE_API(int32) bccmdCapSenseRead(uint32 handle, uint16 mask, uint16 values[]);
TESTENGINE_API(int32) bccmdSetSpiLockCustomerKey(uint32 handle, uint32 custKey[]);
TESTENGINE_API(int32) bccmdGetSpiLockStatus(uint32 handle, uint16* status);
TESTENGINE_API(int32) bccmdSpiLockInitiateLock(uint32 handle);
TESTENGINE_API(int32) teGetChipDisplayName(uint32 handle, uint32 maxLen, char *name);
#define bccmdPsuBuckReg              bccmdPsuSmpsEnable
#define bccmdPsuMicEn                bccmdPsuHvLinearEnable
#define bccmdLed0                    bccmdLed0Enable
#define bccmdLed1                    bccmdLed1Enable
#define bccmdChargerSupressLed0      bccmdChargerSuppressLed0