BlueToolTestforJoy/blue_dir/include/VB6/TestEngineAPI.bas

Declare Function bccmdLed0Enable Lib "TestEngine.dll" (ByVal handle As Long, ByVal state As Integer) As Long
Declare Function bccmdBc3Led1 Lib "TestEngine.dll" (ByVal handle As Long, ByVal data As Integer) As Long
Declare Function bccmdLed1Enable Lib "TestEngine.dll" (ByVal handle As Long, ByVal state As Integer) As Long
Declare Function bccmdChargerStatus Lib "TestEngine.dll" (ByVal handle As Long, ByRef state As Integer) As Long
Declare Function bccmdChargerDisable Lib "TestEngine.dll" (ByVal handle As Long, ByVal state As Integer) As Long
Declare Function bccmdChargerSuppressLed0 Lib "TestEngine.dll" (ByVal handle As Long, ByVal state As Integer) As Long
Declare Function hciCreateConnectionNoWait Lib "TestEngine.dll" (ByVal handle As Long, ByVal lap As Long, ByVal uap As Byte, ByVal nap As Integer, ByVal pktType As Integer, ByVal pageScanRepMode As Byte, ByVal pageScanMode As Byte, ByVal clockOffset As Integer, ByVal allowRoleSwitch As Byte) As Long
Declare Function hciWriteAuthenticationEnable Lib "TestEngine.dll" (ByVal handle As Long, ByVal enable As Byte) As Long
Declare Function hciLinkKeyRequestNegativeReply Lib "TestEngine.dll" (ByVal handle As Long, ByVal lap As Long, ByVal uap As Byte, ByVal nap As Integer) As Long
Declare Function hciWaitForConnectionComplete Lib "TestEngine.dll" (ByVal handle As Long, ByRef connHandle As Integer) As Long
Declare Function hciWaitForLinkKeyRequest Lib "TestEngine.dll" (ByVal handle As Long, ByRef lap As Long, ByRef uap As Byte, ByRef nap As Integer) As Long
Declare Function hciWaitForPinCodeRequest Lib "TestEngine.dll" (ByVal handle As Long, ByRef lap As Long, ByRef uap As Byte, ByRef nap As Integer) As Long
Declare Function hciWaitForEncryptionChange Lib "TestEngine.dll" (ByVal handle As Long, ByRef enable As Byte) As Long
Declare Function hciPinCodeRequestReply Lib "TestEngine.dll" (ByVal handle As Long, ByVal lap As Long, ByVal uap As Byte, ByVal nap As Integer, ByVal pinCodeLength As Byte, ByVal pinCode As Byte) As Long
Declare Function hciSetConnectionEncryption Lib "TestEngine.dll" (ByVal handle As Long, ByVal connHandle As Integer, ByVal enable As Byte) As Long
Declare Function vmWrite Lib "TestEngine.dll" (ByVal handle As Long, ByVal data As Integer) As Long
Declare Function vmRead Lib "TestEngine.dll" (ByVal handle As Long, ByVal data As Integer, ByVal timeout As Integer) As Long
Declare Function bccmdSetSingleChan Lib "TestEngine.dll" (ByVal handle As Long, ByVal channel As Integer) As Long
Declare Function bccmdSetHoppingOn Lib "TestEngine.dll" (ByVal handle As Long) As Long
Declare Function bccmdFmSwitchPower Lib "TestEngine.dll" (ByVal handle As Long, ByVal powerOn As Byte) As Long
Declare Function bccmdFmSetFreq Lib "TestEngine.dll" (ByVal handle As Long, ByVal freqKHz As Long) As Long
Declare Function bccmdFmGetRssi Lib "TestEngine.dll" (ByVal handle As Long, ByRef rssi As Byte) As Long
Declare Function bccmdFmGetSnr Lib "TestEngine.dll" (ByVal handle As Long, ByRef snr As Integer) As Long
Declare Function bccmdFmGetIfOffset Lib "TestEngine.dll" (ByVal handle As Long, ByRef offset As Integer) As Long
Declare Function bccmdFmGetStatus Lib "TestEngine.dll" (ByVal handle As Long, ByRef status As Byte) As Long
Declare Function bccmdFmSetupAudio Lib "TestEngine.dll" (ByVal handle As Long, ByVal route As Byte, ByVal gain As Byte, ByVal channel As Byte) As Long
Declare Function bccmdFmVerifyRDSPi Lib "TestEngine.dll" (ByVal handle As Long, ByVal pi As Integer, ByVal timeoutMs As Integer, ByRef matched As Byte) As Long
Declare Function bccmdFmTxSwitchPower Lib "TestEngine.dll" (ByVal handle As Long, ByVal powerOn As Byte) As Long
Declare Function bccmdFmTxSetFreq Lib "TestEngine.dll" (ByVal handle As Long, ByVal freqKHz As Long) As Long
Declare Function bccmdFmTxSetPowerLevel Lib "TestEngine.dll" (ByVal handle As Long, ByVal powerLevel As Integer) As Long
Declare Function bccmdFmTxSetupAudio Lib "TestEngine.dll" (ByVal handle As Long, ByVal route As Byte, ByVal audioGain As Integer) As Long
Declare Function bccmdDisconnectAudio Lib "TestEngine.dll" (ByVal handle As Long) As Long
Declare Function bccmdDirectChargerPsuTrim Lib "TestEngine.dll" (ByVal handle As Long, ByVal trim As Integer) As Long
Declare Function teSupportsHq Lib "TestEngine.dll" (ByVal handle As Long, ByRef hqSupported As Byte) As Long
Declare Function bccmdSetAuxDac Lib "TestEngine.dll" (ByVal handle As Long, ByVal enable As Byte, ByVal level As Byte) As Long
Declare Function bccmdSetMicBiasIf Lib "TestEngine.dll" (ByVal handle As Long, ByVal instance As Byte, ByVal enable As Byte, ByVal voltage As Byte) As Long
Declare Function bccmdSetMicBias Lib "TestEngine.dll" (ByVal handle As Long, ByVal enable As Byte, ByVal voltage As Byte, ByVal current As Byte, ByVal enableLowPowerMode As Byte) As Long
Declare Function teGetAvailableSpiPorts Lib "TestEngine.dll" (ByRef maxLen As Integer, ByVal ports As String, ByVal trans As String, ByRef count As Integer) As Long
Declare Function bccmdProvokeFault Lib "TestEngine.dll" (ByVal handle As Long, ByVal faultCode As Integer) As Long
Declare Function hqGetFaultReports Lib "TestEngine.dll" (ByVal handle As Long, ByVal maxReports As Integer, ByVal codes As Integer, ByVal timestamps As Long, ByVal repeats As Integer, ByRef numReports As Integer, ByVal timeout As Long) As Long
Declare Function teGetFaultDesc Lib "TestEngine.dll" (ByVal handle As Long, ByVal faultCode As Integer, ByVal desc As String) As Long
Declare Function bccmdSetMapScoPcm Lib "TestEngine.dll" (ByVal handle As Long, ByVal enable As Byte) As Long
Declare Function bccmdGetVrefConstant Lib "TestEngine.dll" (ByVal handle As Long, ByRef vref As Integer) As Long
Declare Function bccmdGetVrefAdc Lib "TestEngine.dll" (ByVal handle As Long, ByRef result As Integer, ByRef numBits As Byte) As Long
Declare Function bccmdBC5FMGetI2CState Lib "TestEngine.dll" (ByVal handle As Long, ByRef sda As Byte, ByRef scl As Byte) As Long
Declare Function refEpGetRssiDbm Lib "TestEngine.dll" (ByVal handle As Long, ByVal freqMHz As Integer, ByVal rssiChip As Double, ByRef rssiDbm As Double) As Long
Declare Function refEpGetPaLevel Lib "TestEngine.dll" (ByVal handle As Long, ByVal freqMHz As Integer, ByVal targetPowerDbm As Double, ByRef intPa As Integer, ByRef powerDbm As Double) As Long
Declare Function refEpWriteCalDataFile Lib "TestEngine.dll" (ByVal handle As Long, ByVal filePath As String) As Long
Declare Function refEpLoadCalDataFile Lib "TestEngine.dll" (ByVal handle As Long, ByVal filePath As String) As Long
Declare Function bccmdGetVmStatus Lib "TestEngine.dll" (ByVal handle As Long, ByRef status As Integer, ByRef exitCode As Integer) As Long
Declare Function bccmdI2CTransfer Lib "TestEngine.dll" (ByVal handle As Long, ByVal slaveAddr As Integer, ByVal txOctets As Integer, ByVal rxOctets As Integer, ByVal restart As Byte, ByVal data As Byte, ByRef octets As Integer) As Long
Declare Function radiotestBle Lib "TestEngine.dll" (ByVal handle As Long, ByVal command As Integer, ByVal channel As Byte, ByVal txLength As Byte, ByVal txPayload As Byte) As Long
Declare Function hqGetBleRxPktCount Lib "TestEngine.dll" (ByVal handle As Long, ByVal timeout As Long, ByRef pktCount As Integer) As Long
Declare Function bccmdGetChargerTrims Lib "TestEngine.dll" (ByVal handle As Long, ByRef chgRefTrim As Integer, ByRef hVrefTrim As Integer, ByRef rTrim As Integer, ByRef iTrim As Integer, ByRef iExtTrim As Integer, ByRef iTermTrim As Integer, ByRef vFastTrim As Integer, ByRef hystTrim As Integer) As Long
Declare Function bccmdCapSenseRead Lib "TestEngine.dll" (ByVal handle As Long, ByVal mask As Integer, ByVal values As Integer) As Long
Declare Function bccmdSetSpiLockCustomerKey Lib "TestEngine.dll" (ByVal handle As Long, ByVal custKey As Long) As Long
Declare Function bccmdGetSpiLockStatus Lib "TestEngine.dll" (ByVal handle As Long, ByRef status As Integer) As Long
Declare Function bccmdSpiLockInitiateLock Lib "TestEngine.dll" (ByVal handle As Long) As Long
Declare Function teGetChipDisplayName Lib "TestEngine.dll" (ByVal handle As Long, ByVal maxLen As Long, ByVal name As String) As Long

' DEPRECATED FUNCTIONS

Declare Function bccmdPsuBuckReg Lib "TestEngine.dll" Alias "bccmdPsuSmpsEnable" (ByVal handle As Long, ByVal reg As Integer) As Long
Declare Function bccmdPsuMicEn Lib "TestEngine.dll" Alias "bccmdPsuHvLinearEnable" (ByVal handle As Long, ByVal reg As Integer) As Long
Declare Function bccmdLed0 Lib "TestEngine.dll" Alias "bccmdLed0Enable" (ByVal handle As Long, ByVal state As Integer) As Long
Declare Function bccmdLed1 Lib "TestEngine.dll" Alias "bccmdLed1Enable" (ByVal handle As Long, ByVal state As Integer) As Long
Declare Function bccmdChargerSupressLed0 Lib "TestEngine.dll" Alias "bccmdChargerSuppressLed0" (ByVal handle As Long, ByVal state As Integer) As Long
